--- a/WinTetris.csproj
+++ b/WinTetris.csproj
@@ -308,6 +308,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="icon.ico" />
+    <None Include="Resources\whoosh.wav" />
+    <None Include="Resources\woodblock.wav" />
     <None Include="Resources\notify.wav" />
     <None Include="Resources\Windows Recycle.wav" />
     <None Include="Resources\histicks.wav" />
